--- a/linear_regression_text_feature_extraction.ipynb
+++ b/linear_regression_text_feature_extraction.ipynb
@@ -11,26 +11,215 @@
     "import pandas as pd\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
+    "import time\n",
     "\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import mean_absolute_error"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>host_id</th>\n",
+       "      <th>host_name</th>\n",
+       "      <th>neighbourhood_group</th>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>number_of_reviews</th>\n",
+       "      <th>last_review</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "      <th>calculated_host_listings_count</th>\n",
+       "      <th>availability_365</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2539</td>\n",
+       "      <td>Clean &amp; quiet apt home by the park</td>\n",
+       "      <td>2787</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>Kensington</td>\n",
+       "      <td>40.64749</td>\n",
+       "      <td>-73.97237</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>149</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2018-10-19</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>6</td>\n",
+       "      <td>365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2595</td>\n",
+       "      <td>Skylit Midtown Castle</td>\n",
+       "      <td>2845</td>\n",
+       "      <td>Jennifer</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Midtown</td>\n",
+       "      <td>40.75362</td>\n",
+       "      <td>-73.98377</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>225</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2019-05-21</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>2</td>\n",
+       "      <td>355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3647</td>\n",
+       "      <td>THE VILLAGE OF HARLEM....NEW YORK !</td>\n",
+       "      <td>4632</td>\n",
+       "      <td>Elisabeth</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Harlem</td>\n",
+       "      <td>40.80902</td>\n",
+       "      <td>-73.94190</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3831</td>\n",
+       "      <td>Cozy Entire Floor of Brownstone</td>\n",
+       "      <td>4869</td>\n",
+       "      <td>LisaRoxanne</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>Clinton Hill</td>\n",
+       "      <td>40.68514</td>\n",
+       "      <td>-73.95976</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>89</td>\n",
+       "      <td>1</td>\n",
+       "      <td>270</td>\n",
+       "      <td>2019-07-05</td>\n",
+       "      <td>4.64</td>\n",
+       "      <td>1</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5022</td>\n",
+       "      <td>Entire Apt: Spacious Studio/Loft by central park</td>\n",
+       "      <td>7192</td>\n",
+       "      <td>Laura</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>East Harlem</td>\n",
+       "      <td>40.79851</td>\n",
+       "      <td>-73.94399</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>80</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2018-11-19</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id                                              name  host_id  \\\n",
+       "0  2539                Clean & quiet apt home by the park     2787   \n",
+       "1  2595                             Skylit Midtown Castle     2845   \n",
+       "2  3647               THE VILLAGE OF HARLEM....NEW YORK !     4632   \n",
+       "3  3831                   Cozy Entire Floor of Brownstone     4869   \n",
+       "4  5022  Entire Apt: Spacious Studio/Loft by central park     7192   \n",
+       "\n",
+       "     host_name neighbourhood_group neighbourhood  latitude  longitude  \\\n",
+       "0         John            Brooklyn    Kensington  40.64749  -73.97237   \n",
+       "1     Jennifer           Manhattan       Midtown  40.75362  -73.98377   \n",
+       "2    Elisabeth           Manhattan        Harlem  40.80902  -73.94190   \n",
+       "3  LisaRoxanne            Brooklyn  Clinton Hill  40.68514  -73.95976   \n",
+       "4        Laura           Manhattan   East Harlem  40.79851  -73.94399   \n",
+       "\n",
+       "         room_type  price  minimum_nights  number_of_reviews last_review  \\\n",
+       "0     Private room    149               1                  9  2018-10-19   \n",
+       "1  Entire home/apt    225               1                 45  2019-05-21   \n",
+       "2     Private room    150               3                  0         NaN   \n",
+       "3  Entire home/apt     89               1                270  2019-07-05   \n",
+       "4  Entire home/apt     80              10                  9  2018-11-19   \n",
+       "\n",
+       "   reviews_per_month  calculated_host_listings_count  availability_365  \n",
+       "0               0.21                               6               365  \n",
+       "1               0.38                               2               355  \n",
+       "2                NaN                               1               365  \n",
+       "3               4.64                               1               194  \n",
+       "4               0.10                               1                 0  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# загрузим данные и посмотрим на первые строки\n",
+    "df = pd.read_csv('AB_NYC_2019.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# загрузим данные\n",
-    "df = pd.read_csv('AB_NYC_2019.csv')\n",
-    "\n",
     "# выберем признаки 'name', 'price'\n",
     "data = df[['name','price']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -58,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +302,7 @@
        "price  48895.0  152.720687  240.15417  0.0  69.0  106.0  175.0  10000.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +407,7 @@
        "price  48868.0  152.756732  240.202905  10.0  69.0  106.0  175.0  10000.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,49 +418,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# разделим выборку на обучающую и тестовую\n",
-    "X, y = data['name'], data['price']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)"
+    "# отделим целевой признак от независимого\n",
+    "X, y = data['name'], data['price']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# создадим pipline\n",
+    "pipeline = Pipeline([\n",
+    "    ('vect', CountVectorizer()),\n",
+    "    ('tfidf', TfidfTransformer()),\n",
+    "    ('lr', LogisticRegression()),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "72.80246913580247\n"
+      "73.0583576865399\n",
+      "-— 1270.8165681362152 seconds —-\n"
      ]
     }
    ],
    "source": [
-    "# импортируем библиотеки необходимые для предсказания\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "# посмотрим на среднее значение абсолютной ошибки на кросс-валидации\n",
+    "start_time = time.time()\n",
+    "cvs = cross_val_score(pipeline, X, y, cv=5, n_jobs=-1, scoring='neg_mean_absolute_error')\n",
+    "print(abs(cvs.mean()))\n",
+    "print(\"-— %s seconds —-\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# разобьем выборку на train и test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Girls only, cozy room one block from Times Square\n",
+      "Beautiful room in Bushwick\n",
+      "Spacious 2-bedroom Apt in Heart of Greenpoint\n",
+      "Very Spacious bedroom, steps from CENTRAL PARK.\n",
+      "Spacious and Modern 2 Bedroom Apartment\n"
+     ]
+    }
+   ],
+   "source": [
+    "# отобразим 5 отелей в train с наименьшей ценой размещения\n",
+    "cheap = X_test.loc[y_test.sort_values().head(5).index]\n",
+    "for i in cheap:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SuperBowl Penthouse Loft 3,000 sqft\n",
+      "Luxury townhouse Greenwich Village\n",
+      "Apartment New York \n",
+      "Hell’s Kitchens\n",
+      "3000 sq ft daylight photo studio\n",
+      "Furnished room in Astoria apartment\n"
+     ]
+    }
+   ],
+   "source": [
+    "# отобразим 5 отелей в test с наибольшей ценой размещения\n",
+    "expensive = X_test.loc[y_test.sort_values().tail(5).index]\n",
+    "for i in expensive:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# обучим модель на выборке train\n",
+    "pipeline.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# посмотрим на среднее значение абсолютной ошибки на тестовой выборке\n",
+    "mean_absolute_error(y_test, pipeline.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# объединим в один датафрейм названия отелей, реальные значения и предсказанные значения цены\n",
+    "result = pd.concat([X_test, y_test], axis=1)\n",
+    "result['predict'] = pipeline.predict(X_test)\n",
+    "result.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# в отдельный столбец 'modulo error' внесем разность предсказанных и реальных значений по модулю\n",
+    "result['modulo error'] = abs(result['price'] - result['predict'])\n",
     "\n",
-    "from sklearn.metrics import mean_absolute_error\n",
+    "# посмотрим на 5 значений, в которых модель точно предсказала цену\n",
+    "result.sort_values(by=['modulo error']).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# посмотрим на 5 значений, в которых модель плохо предсказала цену\n",
+    "result.sort_values(by=['modulo error']).tail(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# придумаем несколько названий отелей\n",
+    "names = np.array(['Super luxury hotel', 'Pearl', 'Cheap shelter'])\n",
     "\n",
-    "\n",
-    "# обучим модель и сделаем предсказание, в качестве метрики возьмем MAE\n",
-    "pipeline = Pipeline([\n",
-    "    ('vect', CountVectorizer()),\n",
-    "    ('tfidf', TfidfTransformer()),\n",
-    "    ('lr', LogisticRegression()),\n",
-    "])\n",
-    "\n",
-    "pipeline.fit(X_train, y_train)\n",
-    "mae = mean_absolute_error(y_test, pipeline.predict(X_test))\n",
-    "\n",
-    "print(mae)"
+    "# сделаем таблицу с предсказаниями модели\n",
+    "pd.concat([pd.DataFrame(a, columns=['name']), pd.DataFrame(pipeline.predict(a), columns=['price'])], axis=1)"
    ]
   }
  ],
