--- a/linear_regression_text_feature_extraction.ipynb
+++ b/linear_regression_text_feature_extraction.ipynb
@@ -527,9 +527,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('vect', CountVectorizer()), ('tfidf', TfidfTransformer()),\n",
+       "                ('lr', LogisticRegression())])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# обучим модель на выборке train\n",
     "pipeline.fit(X_train, y_train)"
@@ -537,9 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "73.67580656162609"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# посмотрим на среднее значение абсолютной ошибки на тестовой выборке\n",
     "mean_absolute_error(y_test, pipeline.predict(X_test))"
@@ -547,9 +570,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>price</th>\n",
+       "      <th>predict</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>35914</th>\n",
+       "      <td>Art &amp; Expression Inn</td>\n",
+       "      <td>43</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30501</th>\n",
+       "      <td>Private Room in the Heart of Financial District</td>\n",
+       "      <td>110</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14463</th>\n",
+       "      <td>Cute bedroom in the East Village</td>\n",
+       "      <td>75</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12249</th>\n",
+       "      <td>Penthouse Duplex &amp; Roof Top Terrace</td>\n",
+       "      <td>345</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4996</th>\n",
+       "      <td>Bedroom in Williamsburg w/ Terrace</td>\n",
+       "      <td>90</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  name  price  predict\n",
+       "35914                             Art & Expression Inn     43      125\n",
+       "30501  Private Room in the Heart of Financial District    110      100\n",
+       "14463                 Cute bedroom in the East Village     75      100\n",
+       "12249              Penthouse Duplex & Roof Top Terrace    345      250\n",
+       "4996                Bedroom in Williamsburg w/ Terrace     90       80"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# объединим в один датафрейм названия отелей, реальные значения и предсказанные значения цены\n",
     "result = pd.concat([X_test, y_test], axis=1)\n",
@@ -559,9 +657,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>price</th>\n",
+       "      <th>predict</th>\n",
+       "      <th>modulo error</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24448</th>\n",
+       "      <td>Sunny room in historic Bedstuy, Brooklyn</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7796</th>\n",
+       "      <td>*** Gorgeous 2BD apt with Terrace ***</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39513</th>\n",
+       "      <td>Verona TwentyOne - Kendal Garden</td>\n",
+       "      <td>150</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47918</th>\n",
+       "      <td>Private Comfortable Room near Subway</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8601</th>\n",
+       "      <td>Nice, cozy double size bedroom</td>\n",
+       "      <td>50</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           name  price  predict  modulo error\n",
+       "24448  Sunny room in historic Bedstuy, Brooklyn     60       60             0\n",
+       "7796      *** Gorgeous 2BD apt with Terrace ***    200      200             0\n",
+       "39513          Verona TwentyOne - Kendal Garden    150      150             0\n",
+       "47918      Private Comfortable Room near Subway     50       50             0\n",
+       "8601             Nice, cozy double size bedroom     50       50             0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# в отдельный столбец 'modulo error' внесем разность предсказанных и реальных значений по модулю\n",
     "result['modulo error'] = abs(result['price'] - result['predict'])\n",
@@ -572,11 +751,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>price</th>\n",
+       "      <th>predict</th>\n",
+       "      <th>modulo error</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>25825</th>\n",
+       "      <td>Fulton 2</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15560</th>\n",
+       "      <td>Luxury townhouse Greenwich Village</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>300</td>\n",
+       "      <td>5700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37194</th>\n",
+       "      <td>Apartment New York \\nHell’s Kitchens</td>\n",
+       "      <td>6500</td>\n",
+       "      <td>200</td>\n",
+       "      <td>6300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44034</th>\n",
+       "      <td>3000 sq ft daylight photo studio</td>\n",
+       "      <td>6800</td>\n",
+       "      <td>200</td>\n",
+       "      <td>6600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9151</th>\n",
+       "      <td>Furnished room in Astoria apartment</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9900</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       name  price  predict  modulo error\n",
+       "25825                              Fulton 2   5000       60          4940\n",
+       "15560    Luxury townhouse Greenwich Village   6000      300          5700\n",
+       "37194  Apartment New York \\nHell’s Kitchens   6500      200          6300\n",
+       "44034      3000 sq ft daylight photo studio   6800      200          6600\n",
+       "9151    Furnished room in Astoria apartment  10000      100          9900"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# посмотрим на 5 значений, в которых модель плохо предсказала цену\n",
     "result.sort_values(by=['modulo error']).tail(5)"
@@ -584,15 +844,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Super luxury hotel</td>\n",
+       "      <td>199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pearl</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cheap shelter</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 name  price\n",
+       "0  Super luxury hotel    199\n",
+       "1               Pearl     70\n",
+       "2       Cheap shelter     50"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# придумаем несколько названий отелей\n",
     "names = np.array(['Super luxury hotel', 'Pearl', 'Cheap shelter'])\n",
     "\n",
     "# сделаем таблицу с предсказаниями модели\n",
-    "pd.concat([pd.DataFrame(a, columns=['name']), pd.DataFrame(pipeline.predict(a), columns=['price'])], axis=1)"
+    "pd.concat([pd.DataFrame(names, columns=['name']), pd.DataFrame(pipeline.predict(names), columns=['price'])], axis=1)"
    ]
   }
  ],
